Fixed header and got burger menu working to replace links when on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
+
 .jumbotron {
     background-color:black;
     /* background-image: url(/images/jumbo-bk.jpg); */
     background-repeat: no-repeat;
     background-size: contain;
+    /* padding-top: 190px; */
     
+}
+
+.line-sep {
+
+    border-bottom: 5px solid black;
 }
